<resources>
    <string name="app_name">FeitoPorMim</string>

    <string name="login_failed">Erro ao Realizar Login</string>
    <string name="login_title">Login</string>
    <string name="email_input_hint">Digite seu Email</string>
    <string name="password_input_hint">Digite sua Senha</string>
    <string name="current_password_input_hint">Digite sua Senha Atual</string>
    <string name="new_password_input_hint">Digite sua Nova Senha</string>
    <string name="fullname_input_hint">Digite seu Nome Completo</string>
    <string name="username_input_hint">Digite seu Nome de Usuário</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Nome de Usuário</string>
    <string name="fullname_hint">Nome Completo</string>
    <string name="password_hint">Senha</string>
    <string name="current_password_hint">Senha Atual</string>
    <string name="new_password_hint">Nova Senha</string>
    <string name="confirm_password_hint">Confirmar Senha</string>
    <string name="stay_logged_checkbox">Manter logado</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="load_feed_button_text">Carregar Feed</string>
    <string name="register_button_text">Cadastrar</string>
    <string name="advance_button_text">Avançar</string>
    <string name="save_button_text">Salvar</string>
    <string name="login_icon_content_description">Ícone de Login</string>
    <string name="register_icon_content_description">Ícone de Cadastro</string>
    <string name="arrow_back_content_description">Ícone de Voltar</string>
    <string name="title_register_form">Registro</string>
    <string name="passwords_do_not_match">As Senhas Não Conferem.</string>
    <string name="fill_all_fields">Por Favor, Preencha Todos os Campos.</string>
    <string name="no_photo_selected">Nenhuma Foto Selecionada.</string>
    <string name="change_password">Alterar Senha</string>
    <string name="my_profile">Meu Perfil</string>
    <string name="incorrect_current_password">Senha Atual Incorreta</string>
    <string name="fill_all_password_fields">Preencha Todos os Campos de Senha</string>
    <string name="user_not_found">Usuário Não Encontrado</string>
    <string name="error_loading_user_data">Erro ao Carregar os Dados do Usuário</string>
    <string name="no_image_selected">Nenhuma Imagem Selecionada</string>
    <string name="fill_description_field">Preencha o Campo Descrição.</string>
    <string name="no_post_image_added">Nenhuma Imagem Adicionada ao Post.</string>
    <string name="error_converting_image">Erro ao Converter a Imagem.</string>
    <string name="location_permission_denied">Permissão de Localização Negada.</string>
    <string name="no_location">Sem Localização</string>
    <string name="data_updated_successfully">Dados Atualizados com Sucesso!</string>
    <string name="error_updating_data">Erros ao Atualizar os Dados.</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="title_what_are_you_thinking">No que você está pensando?</string>
    <string name="save_location">Gravar Localização</string>
    <string name="new_post">Novo Post</string>
    <string name="initial_page">Página Inicial</string>
    <string name="search_by_location">Buscar por localização...</string>
    <string name="searching_location">Buscando localização...</string>
    <string name="password_minimum_length">A Senha Deve ter Pelo Menos 6 Caracteres.</string>
    <string name="password_too_short">A Senha Deve Possuir Ao Menos 6 Caracteres.</string>
    <string name="invalid_email">Formato de E-mail Inválido</string>
    <string name="register_error">Erro no Cadastro</string>

</resources>