<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:fillViewport="true"
    tools:context=".ui.activities.myProfile.MyProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_color"
            app:title="FeitoPorMim"
            app:titleTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_profile"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/profileImageContainer"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/empty_profile"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/RoundedImage" />

                <ImageView
                    android:id="@+id/add_image_button"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_camera"
                    app:tint="@color/white"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="21dp"
                    android:background="@drawable/circle_background"
                    android:padding="6dp" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname_hint"
                android:padding="8dp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/color_input_text"
                app:boxStrokeWidth="2dp"
                android:layout_marginTop="16dp"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileImageContainer"
                app:placeholderText="@string/fullname_input_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_container2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:padding="8dp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/color_input_text"
                app:boxStrokeWidth="2dp"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_container"
                app:placeholderText="@string/username_input_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_container3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_password_hint"
                android:padding="8dp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/color_input_text"
                app:boxStrokeWidth="2dp"
                app:hintTextColor="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="#FFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_container2"
                app:placeholderText="@string/current_password_input_hint"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_container4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password_hint"
                android:padding="8dp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/color_input_text"
                app:boxStrokeWidth="2dp"
                app:hintTextColor="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="#FFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_container3"
                app:placeholderText="@string/new_password_input_hint"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/myCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_container4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:text="@string/save_button_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:iconGravity="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/myCheckBox" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
