<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_post"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/postImageContainer"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_frame_background">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imagePost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_image"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/RoundedImageView"/>

        <ImageView
            android:id="@+id/add_image_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_camera"
            app:tint="@color/white"
            android:layout_gravity="bottom|end"
            android:layout_margin="21dp"
            android:background="@drawable/circle_background"
            android:padding="6dp" />
    </FrameLayout>

    <TextView
        android:id="@+id/location_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/no_location"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postImageContainer" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_what_are_you_thinking"
        android:padding="8dp"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_post"
        app:placeholderText="@string/title_what_are_you_thinking">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="3"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/myCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_location"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_container2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/deep_steel_blue"
        android:paddingHorizontal="18dp"
        android:paddingVertical="12dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:cornerRadius="6dp"
        app:iconGravity="textStart"
        android:textAllCaps="true"
        android:letterSpacing="0.07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myCheckBox"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/slate_indigo"
        android:paddingHorizontal="18dp"
        android:paddingVertical="12dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:cornerRadius="6dp"
        android:letterSpacing="0.07"
        app:iconGravity="textStart"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/confirm_button" />

</androidx.constraintlayout.widget.ConstraintLayout>